# antigravity-architecture-registry

./: Makefile  README.md  TODO.md  cli.py  gemini-extension.json  mcp_config.json  mcp_config.json.bak  mcp_server.py  package.json  patch_config  plugin.json.bak  pyproject.toml  system_architecture.json
agents/: ComponentImplementer.json  ComponentImplementer.md  ComponentPlanner.json  ComponentPlanner.md
dev_docs/: planning_requirements.md  workflow_sketch.txt
engine/: engine.py  exceptions.py  models.py  validator.py  visualizer.py
plugin/: .mcp.json
plugin/.claude-plugin/: plugin.json
plugin/agents/: ComponentImplementer.md  ComponentPlanner.md
plugin/skills/architecture-registry/: SKILL.md
scripts/: postinstall.js
skills/architecture-registry/: SKILL.md  mcp_server.py
skills/architecture-registry/engine/: __init__.py  dsl_compiler.py  engine.py  installer.py  models.py  validator.py  visualizer.py
tests/: test_compiled_contract.py  test_global_invariants.py  test_implementation_spec.py  test_lifecycle.py  test_mcp_modification_tasks.py  test_reviewer.py  test_usage_crud.py
